# supervisor-coding-agent

./: .env.sample  .env.staging  .env.template  .gitignore  .gitmessage  .release-please-config.json  .release-please-manifest.json  BACKEND_API_REFERENCE.md  CHANGELOG.md  CLAUDE.md  CLAUDE_HOOKS_README.md  CODE_REVIEW_REPORT.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_TESTING.md  DEPLOYMENT_WORKFLOW.md  Dockerfile  FINAL_IMPLEMENTATION_SUMMARY.md  GITHUB_ACTIONS_GUIDE.md  MONITORING_VERIFICATION_GUIDE.md  MULTI_AGENT_PLAN.md  Makefile  PHASE1_INTEGRATION_COMPLETE.md  PHASE2_COMPLETION_REPORT.md  PHASE2_DEPLOYMENT_REPORT.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PR_AUTOMATION_SUMMARY.md  README.md  REALITY_CHECK_ANALYSIS.md  RELEASE_GUIDE.md  RELEASE_NOTES_v1.0.0.md  SETUP_COMPLETE.md  SOLID_DRY_ANALYSIS_REPORT.md  TECHNICAL_FIXES.md  TEST_CLOUD_RUN.md  TROUBLESHOOTING.md  WORKFLOW_TESTING.md  bandit-results.json  bandit_report.json  claude_hooks_config.json  create_analytics_tables.sql  (+42 more)
.claude/: settings.local.json
.claude/commands/: commit.md  critique.md  document.md  implement.md  plan.md  refine.md  test.md
.github/: pull_request_template.md
.github/scripts/: environment-state.py  smoke-tests.sh
.github/workflows/: automated-pr-workflow.yml  commit-validation.yml  deploy-cloud-run.yml  pr-environment-broken.yml  pr-environment-old.yml  pr-environment-parallel-restored.yml  pr-environment-single-runner.yml  pr-environment.yml  pr-merge-gate.yml  promote-to-dev.yml  release.yml  release.yml.disabled  test-gcp-connection.yml
config/: development.env  production.env  staging.env
deployment/: README.md
deployment/cloud-run/: deploy.sh  frontend-service.yaml  grant-github-actions-permissions.sh  service.yaml  setup-cloud-run.sh
deployment/gcp/: deploy-application.sh  (+2 more)
docs/: ARCHITECTURE.md  CHAT_ENHANCEMENT_IMPLEMENTATION_PLAN.md  CLOUD_RUN_MIGRATION.md  CLOUD_RUN_SETUP.md  CONTAINER_NATIVE_DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_VALIDATION.md  DEPLOYMENT_WORKFLOW.md  DEVELOPER_QUICK_REFERENCE.md  ENHANCED_CLAUDE_MD_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_ROADMAP.md  NGINX_MIGRATION.md  PHASE2_IMPLEMENTATION_PLAN.md  WORKFLOW_TESTING.md
frontend/: CHANGELOG.md  Dockerfile.dev  Dockerfile.prod  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js  vitest.config.js
linting_env/: pyvenv.cfg
plans/: README.md  enhancement-plan.md  master-implementation-plan.md  multi-provider-architecture.md
scripts/: auto-shutdown.sh  auto-startup.sh  backup-system.sh  build-optimized.sh  claude_hook_pr_monitor.py  cleanup-github-gcp-integration.sh  cleanup_merged_branches.py  dev-setup.sh  health-check.sh  health-monitor.sh  manage-config.sh  manage-secrets.sh  post_deployment_validation.py  pr_monitor.py  pr_reviewer_and_merger.py  quick-deploy.sh  quick-dev-start.sh  quick-start.sh  restore-system.sh  rolling-update.sh  rotate_pr_logs.sh  setup-github-gcp-integration.sh  setup-github-gcp-simple.sh  setup-schedule.sh  setup.sh  setup_claude_hooks.py  setup_database.py  setup_pr_monitoring_cron.sh  test-frontend-build.sh  test-local-build.sh
supervisor_agent/: CHANGELOG.md  __init__.py  config.py
terraform/: README.md
tests/: dev_environment_validation.py  e2e_smoke_tests.py
(+271 files in other folders)
