[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supervisor-agent"
version = "1.0.0"
description = "AI-powered supervisor coding agent with multi-provider support and advanced task distribution"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Supervisor Agent Team", email = "team@supervisor-agent.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "celery==5.3.4",
    "redis==5.0.1",
    "sqlalchemy==2.0.23",
    "alembic==1.12.1",
    "psycopg2-binary==2.9.9",
    "pydantic[email]==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "httpx==0.25.2",
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "pytest-mock==3.12.0",
    "pytest-cov==4.1.0",
    "slack-sdk==3.26.1",
    "croniter==2.0.1",
    "pytz==2023.3",
    "psutil==5.9.6",
    "websockets==12.0",
    "PyJWT==2.8.0",
    "passlib[bcrypt]==1.7.4",
    "python-jose[cryptography]==3.3.0",
    "python-multipart==0.0.6",
    "authlib==1.2.1",
    "slowapi==0.1.9",
    "numpy>=1.26.0,<2.0.0",
    "pandas>=2.1.0,<3.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "openpyxl==3.1.2",
    "semver==3.0.2",
]

[project.urls]
Homepage = "https://github.com/arjaygg/supervisor-coding-agent"
Repository = "https://github.com/arjaygg/supervisor-coding-agent"
Issues = "https://github.com/arjaygg/supervisor-coding-agent/issues"

[tool.setuptools.packages.find]
include = ["supervisor_agent*"]

[tool.setuptools.package-data]
supervisor_agent = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["supervisor_agent/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "redis.*",
    "psycopg2.*",
    "slack_sdk.*",
    "croniter.*",
    "psutil.*",
    "websockets.*",
    "passlib.*",
    "jose.*",
    "authlib.*",
    "slowapi.*",
    "numpy.*",
    "pandas.*",
    "sklearn.*",
    "openpyxl.*",
    "semver.*",
]
ignore_missing_imports = true